# counters-service

./: README.md
backend/: .envrc  .gitignore  Makefile  README.md  TODO.md  dune-project  package.json
backend/atd/: dune  transform.re  types.atd
backend/esy.lock/: index.json
backend/http-counters/: delete.curl  delete.httpie  get.curl  getbyid.curl  getbyid.httpie  health.httpie  post.curl  post.httpie  put.curl  put.httpie  read_all_counters.httpie
backend/test/: dune  test.re
backend/test/resources/: counters.json
frontend/: bsconfig.json  package.json  shared.sh
frontend/shared-reason/: Counter_bs.re  Counter_bs.rei  Counter_t.rei
frontend/src/: Api.re  App.re  Http.re
frontend/src/components/: Todo.md
